Atualização: Models (ItemPedido) atualizados; DTOs (ItemPedido) atualizados; Services (ItemPedido) atualizados; Mappers (ItemPedido) criados;