@@ -22,25 +22,35 @@ public class ClienteServiceImpl implements ClienteService {
 
     @Override
     public ClienteDTO salvar(ClienteDTO clienteDTO) {
-        ClienteModel clienteModel = clienteMapper.toClienteModel(clienteDTO);
-        ClienteModel savedCliente = clienteRepository.save(clienteModel);
-        return clienteMapper.toClienteDTO(savedCliente);
+        ClienteModel clienteModel = clienteMapper
+        		.toClienteModel(clienteDTO);
+        ClienteModel savedCliente = clienteRepository
+        		.save(clienteModel);
+        return clienteMapper
+        		.toClienteDTO(savedCliente);
     }
 
     @Override
     public Optional<ClienteDTO> buscarPorId(Long id) {
-        return clienteRepository.findById(id).map(clienteMapper::toClienteDTO);
+        return clienteRepository
+        		.findById(id)
+        		.map(clienteMapper::toClienteDTO);
     }
 
     @Override
     public List<ClienteDTO> listarTodos() {
-        return clienteRepository.findAll().stream()
+        return clienteRepository
+        		.findAll()
+        		.stream()
         		.map(clienteMapper::toClienteDTO)
-        		.collect(Collectors.toList());
+        		.collect(Collectors
+        				.toList());
     }
 
     @Override
     public void deletarPorId(Long id) {
-        clienteRepository.deleteById(id);
+        clienteRepository
+        .deleteById(id);
     }
+    
 }
